# PolyDET-Rust

./: .gitignore  Cargo.toml  README  Rocket.toml  runmysql.sh
.cargo/: config.toml
src/: api.rs  database.rs  interface.rs  main.rs  requests.rs  security.rs
src/api/: reg_newdevice.rs
src/database/: mysql_imp.rs
src/interface/: idb.rs  server_api.rs
